# another-mp2i-bot

./: .dockerignore  .env.example  .gitignore  Caddyfile.example  Dockerfile  LICENSE.md  README.md  compose.debug.yml  compose.dev.yml  compose.yml  config.example.toml  docker-compose.yml  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml  cicd.yml  docker-build.yml  lint.yml
deploy/: Caddyfile  compose.caddy.yml  compose.filebrowser.yml  compose.webhook.yml  compose.yml
deploy/webhook/: hooks.yml  watchtower-update.sh
docker/: compose.caddy.yml  compose.dev.yml  compose.prod.local.yml  compose.prod.yml
docs/: bot-structure.md  contibute.md
resources/: colloscope_mp2i.csv  colloscope_mpi.csv  mp2i_game_levels.json
resources/colloscopes/: example.csv
resources/personal_informations/: example.csv
src/: bot.py  main.py
src/cogs/: admin.py  birthday.py  carpooling.py  colloscope_helper.py  cts.py  fun.py  mp2i.py  openai_chatbot.py  openia_chatbot.py  pin.py  restauration.py  valentin-react.py  washingmachines.py  we_like_reactions.py  weather_icon.py
src/cogs/colloscope_helper/: __init__.py  colloscope_maker.py
src/core/: _config.py  constants.py  custom_command_tree.py  errors.py  logger.py  personal_infos_loader.py  utils.py
src/libraries/cts/: __init__.py  models.py
src/libraries/openweathermap/: __init__.py  models.py
src/libraries/washingmachines/: __init__.py  models.py
src/resources/: mp2i_game_levels.json
src/utils/: __init__.py  constants.py  custom_command_tree.py  logger.py
src/utils/cts_api/: __init__.py
src/utils/openweathermap_api/: __init__.py
typings/pdf2image/: pdf2image.py
webhook/: hooks.yml
